adjust body styles to use 100svh (avoid scrolling on mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,11 @@ body {
 
 html, body {
   overflow: scroll;
-  height: 100vh;
+  height: 100svh;
 }
 
 #root {
-  height: 100dvh;
+  height: 100%;
   min-height: 600px;
   min-width: 350px;
   display: flex;
